# Table-Mapper-AI

./: CONTRIBUTING.md  LICENSE  MERMAID_FLOWS.md  Makefile  README.md  config.py  main.py  pyproject.toml  requirements.txt
notebooks/: README.md  README.md 12-07-42-956 AM.md  table_compare.ipynb  table_embeddings.ipynb
src/: __init__.py  comparisons.py  embeddings.py  utils.py  visualizations.py
tests/: test_comparisons.py  test_embeddings.py  test_utils.py
